# espa-cloud-masking

./: .gitignore  CMakeLists.txt  EarthSunDistance.txt  Makefile  Makefile.static  README.md  cfmask.c  cfmask.h  cfmask_build_guide.txt  cfmask_user_guide.txt  const.h  fcssm.c  fmask.c  ias_misc.c  ias_misc_write_envi_header.c  input.c  input.h  object_cloud_shadow_match.c  output.c  output.h  release.note  space.c
cmake-build/: cfmask.cmake.config  cloud-masking.cmake.config  cloud-masking.cmake.static.config
l4-7_cfmask/: CMakeLists.txt  Makefile  Makefile.static  README.md
l4-7_cfmask/cmake-build/: cfmask.cmake.config  cfmask.cmake.config.static
l4-7_cfmask/scripts/: CMakeLists.txt  fillminima.py  run_fillminima.py
l4-7_cfmask/src/: 2d_array.h  CMakeLists.txt  Makefile  Makefile.static  cfmask.c  cfmask.h  cfmask_build_guide.txt  cfmask_user_guide.txt  const.h  date.h  error.c  ias_misc.c  ias_misc_2d_array.c  ias_misc_split_filename.c  ias_types.h  input.c  input.h  misc.c  object_cloud_shadow_match.c  output.c  potential_cloud_shadow_snow_mask.c  readme.txt  release.note
l4-7_cfmask/static_data/: CMakeLists.txt
not-validated-prototype-l8_cfmask/: CMakeLists.txt  Makefile  Makefile.static  README.md
not-validated-prototype-l8_cfmask/cmake-build/: l8cfmask.cmake.config  l8cfmask.cmake.config.static  l8cfmask.cmake.static.config
not-validated-prototype-l8_cfmask/scripts/: fillminima.py
not-validated-prototype-l8_cfmask/src/: CMakeLists.txt  Makefile  Makefile.static  cfmask.c  cfmask.h  input.c  input.h  misc.c  object_cloud_shadow_match.c  output.h  potential_cloud_shadow_snow_mask.c
not-validated-prototype-l8_cfmask/static_data/: Makefile
scripts/: Makefile  Makefile.static  fillminima.py  run_fillminima.py
src/: 2d_array.c  2d_array.h  CFMASK-LICENSE.txt  Makefile  Makefile.static  bool.h  cfmask.c  cfmask.h  cfmask_build_guide.txt  cfmask_user_guide.txt  const.h  date.c  error.c  error.h  fillminima.py  ias_const.h  ias_logging.c  ias_misc.c  ias_misc_2d_array.h  ias_misc_split_filename.c  input.c  input.h  misc.c  myhdf.c  myhdf.h  mystring.h  object_cloud_shadow_match.c  output.c  output.h  potential_cloud_shadow_snow_mask.c  readme.txt  release.note  run_fillminima.py  space.c  space.h  split_filename.c  write_envi_hdr.c
